Minor adjustment for more readable font-sizes - fixes #33

--- a/src/css/jquery.pagewalkthrough.less
+++ b/src/css/jquery.pagewalkthrough.less
@@ -2,7 +2,8 @@
 @content-color: #ffffff;
 @controls-font: 'GochiHand';
 @controls-color: #00c7ff;
-@controls-font-size: 16px;
+@controls-font-size: 18px;
+@content-font-size: 22px;
 @close-control-hover-color: #7eff00;
 
 .control() {
@@ -108,9 +109,9 @@
             font-family: @content-font;
             color: @content-color;
             text-align: center;
-            font-size: @controls-font-size;
+            font-size: @content-font-size;
             a {
-                font-size: @controls-font-size;
+                font-size: @content-font-size;
             }
             .tooltipTitle {
                 font-size: 40px;
